# featural

./: .clang-format  .gitignore  CMakeLists.txt  README.md  build.sh
.github/workflows/: build.yml
data/: consonants.txt  consonants_list.txt  graphs.txt  table.tex  text.moi  text.tex
doc/: readme.moi  relations.dot
include/: geometry.hpp  symbol.hpp  util.hpp  visual.hpp
python/: main.py  moire_converter.py
python/moire/: default.py  moire.py
src/: geometry.cpp  main.cpp  symbol.cpp  util.cpp  visual.cpp
